--- a/SDBGerUI/MainWindow.xaml
+++ b/SDBGerUI/MainWindow.xaml
@@ -19,13 +19,28 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="50" />
             </Grid.RowDefinitions>
-            <TextBox Grid.Row="0" x:Name="StepsInput" Height="auto" Margin="5" TextWrapping="Wrap" Text="Hello World!"
+            <TextBox Grid.Row="0" x:Name="StepsInput" Height="auto" Margin="5" TextWrapping="Wrap"
                      Background="Black" SelectionBrush="#FFB1C0CF" Foreground="White" ForceCursor="True"
                      FontFamily="Consolas" Cursor="" ScrollViewer.CanContentScroll="True"
                      VerticalScrollBarVisibility="Auto" UseLayoutRounding="False" AcceptsReturn="True"
                      AcceptsTab="True" FontStretch="Expanded" />
-            <Button Grid.Row="1" x:Name="RunButton" Content="Run" Margin="5" HorizontalAlignment="Right" Width="75"
+
+            <StackPanel HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal" >
+                <Button Grid.Row="1" x:Name="LoadButton" Content="Load" Margin="5" HorizontalAlignment="Left" Width="75"
+                    Height="30" Click="Load_Click" />
+                <Button Grid.Row="1" x:Name="ReleaseButton" Content="Release" Margin="5" HorizontalAlignment="Left" Width="75"
+                    Height="30" Click="ReleaseButton_OnClick_Click" />
+                <Button Grid.Row="1" x:Name="BuildButton" Content="Build" Margin="5" HorizontalAlignment="Left" Width="75"
+                    Height="30" Click="Build_Click" IsEnabled="False" />
+                <Button Grid.Row="1" x:Name="RebuildButton" Content="Rebuild" Margin="5" HorizontalAlignment="Left" Width="75"
+                    Height="30" Click="Rebuild_Click" IsEnabled="False" />
+                <Button Grid.Row="1" x:Name="BeforeScenarioButton" Content="BeforeScenario" Margin="5" HorizontalAlignment="Right" Width="95"
+                    Height="30" Click="BeforeScenario_Click" />
+                <Button Grid.Row="1" x:Name="BeforeFeatureButton" Content="BeforeFeature" Margin="5" HorizontalAlignment="Right" Width="95"
+                    Height="30" Click="BeforeFeature_Click" />
+                <Button Grid.Row="1" x:Name="RunButton" Content="Run" Margin="5" HorizontalAlignment="Right" Width="75"
                     Height="30" Click="Button_Click" />
+            </StackPanel>
         </Grid>
         <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Background="Black"
                       ResizeDirection="Rows" />
