--- a/SDBGerUI/MainWindow.xaml
+++ b/SDBGerUI/MainWindow.xaml
@@ -1,7 +1,12 @@
 ﻿<Window x:Name="MainUI" x:Class="SDBGerUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="768" Width="1024">
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+        Title="SDBGer" Height="768" Width="1024" d:DataContext="{d:DesignData MainWindow}">
+    <Window.Resources>
+        <AlternationConverter x:Key="AlternationConverter"/>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
@@ -25,7 +30,7 @@
                      VerticalScrollBarVisibility="Auto" UseLayoutRounding="False" AcceptsReturn="True"
                      AcceptsTab="True" FontStretch="Expanded" />
 
-            <StackPanel HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal" >
+            <StackPanel Name="ActionsPanel" HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal" >
                 <Button Grid.Row="1" x:Name="LoadButton" Content="Load" Margin="5" HorizontalAlignment="Left" Width="75"
                     Height="30" Click="Load_Click" />
                 <Button Grid.Row="1" x:Name="ReleaseButton" Content="Release" Margin="5" HorizontalAlignment="Left" Width="75"
@@ -39,7 +44,7 @@
                 <Button Grid.Row="1" x:Name="BeforeFeatureButton" Content="BeforeFeature" Margin="5" HorizontalAlignment="Right" Width="95"
                     Height="30" Click="BeforeFeature_Click" />
                 <Button Grid.Row="1" x:Name="RunButton" Content="Run" Margin="5" HorizontalAlignment="Right" Width="75"
-                    Height="30" Click="Button_Click" />
+                    Height="30" Click="RunButton_Click" />
             </StackPanel>
         </Grid>
         <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Background="Black"
