--- a/SDBGerUI/MainWindow.xaml
+++ b/SDBGerUI/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-        Title="SDBGer" Height="768" Width="1024" d:DataContext="{d:DesignData MainWindow}">
+        Title="SDBGer" Height="900" Width="680" d:DataContext="{d:DesignData MainWindow}">
     <Window.Resources>
         <AlternationConverter x:Key="AlternationConverter"/>
     </Window.Resources>
@@ -33,8 +33,8 @@
             <StackPanel Name="ActionsPanel" HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal" >
                 <Button Grid.Row="1" x:Name="LoadButton" Content="Load" Margin="5" HorizontalAlignment="Left" Width="75"
                     Height="30" Click="Load_Click" />
-                <Button Grid.Row="1" x:Name="ReleaseButton" Content="Release" Margin="5" HorizontalAlignment="Left" Width="75"
-                    Height="30" Click="ReleaseButton_OnClick_Click" />
+                <Button Grid.Row="1" x:Name="ShowConsoleButton" Content="Show Console" Margin="5,10" HorizontalAlignment="Right" Width="85"
+                    Height="30" Click="ShowConsoleButton_Click" />
                 <Button Grid.Row="1" x:Name="BuildButton" Content="Build" Margin="5" HorizontalAlignment="Left" Width="75"
                     Height="30" Click="Build_Click" />
                 <Button Grid.Row="1" x:Name="RebuildButton" Content="Rebuild" Margin="5" HorizontalAlignment="Left" Width="75"
