--- a/SDBGerUI/MainWindow.xaml
+++ b/SDBGerUI/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
-        Title="SDBGer" Height="665" Width="680" d:DataContext="{d:DesignData MainWindow}">
+        Title="SDBGer" Height="665" Width="680" d:DataContext="{d:DesignData MainWindow}" Icon="specbug.ico">
     <Window.Resources>
         <AlternationConverter x:Key="AlternationConverter"/>
     </Window.Resources>
