--- a/SDBGerUI/MainWindow.xaml
+++ b/SDBGerUI/MainWindow.xaml
@@ -2,10 +2,13 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:converters="clr-namespace:SDBGerUI.Converters"
+        mc:Ignorable="d"
         Title="SDBGer" Height="665" Width="680" d:DataContext="{d:DesignData MainWindow}" Icon="specbug.ico">
     <Window.Resources>
-        <AlternationConverter x:Key="AlternationConverter"/>
+        <converters:InverseBooleanConverter x:Key="InverseBooleanConverter" />
+        <converters:IsNotNullToBooleanConverter x:Key="IsNotNullToBooleanConverter" />
     </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -31,19 +34,30 @@
                      VerticalScrollBarVisibility="Auto" UseLayoutRounding="False" AcceptsReturn="True"
                      AcceptsTab="True" FontStretch="Expanded" />
 
-            <StackPanel Name="ActionsPanel" HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal" >
-                <Button Grid.Row="1" x:Name="LoadButton" Content="Load" Margin="5" HorizontalAlignment="Left" Width="75"
-                    Height="30" Click="Load_Click" />
-                <Button Grid.Row="1" x:Name="BuildButton" Content="Build" Margin="5" HorizontalAlignment="Left" Width="75"
-                    Height="30" Click="Build_Click" />
-                <Button Grid.Row="1" x:Name="RebuildButton" Content="Rebuild" Margin="5" HorizontalAlignment="Left" Width="75"
-                    Height="30" Click="Rebuild_Click" />
-                <Button Grid.Row="1" x:Name="BeforeScenarioButton" Content="BeforeScenario" Margin="5" HorizontalAlignment="Right" Width="95"
-                    Height="30" Click="BeforeScenario_Click" />
-                <Button Grid.Row="1" x:Name="BeforeFeatureButton" Content="BeforeFeature" Margin="5" HorizontalAlignment="Right" Width="95"
-                    Height="30" Click="BeforeFeature_Click" />
-                <Button Grid.Row="1" x:Name="RunButton" Content="Run" Margin="5" HorizontalAlignment="Right" Width="75"
-                    Height="30" Click="RunButton_Click" />
+            <StackPanel Name="ActionsPanel" HorizontalAlignment="Stretch" Grid.Row="1" Orientation="Horizontal">
+                <Button x:Name="LoadButton" Content="Load" Margin="5" HorizontalAlignment="Left" Width="75"
+                        Height="30" Click="Load_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="BuildButton" Content="Build" Margin="5" HorizontalAlignment="Left" Width="75"
+                        Height="30" Click="Build_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="RebuildButton" Content="Rebuild" Margin="5" HorizontalAlignment="Left" Width="75"
+                        Height="30" Click="Rebuild_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="BeforeScenarioButton" Content="BeforeScenario" Margin="5" HorizontalAlignment="Right"
+                        Width="95"
+                        Height="30" Click="BeforeScenario_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="BeforeFeatureButton" Content="BeforeFeature" Margin="5" HorizontalAlignment="Right"
+                        Width="95"
+                        Height="30" Click="BeforeFeature_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="RunButton" Content="Run" Margin="5" HorizontalAlignment="Right" Width="75"
+                        Height="30" Click="RunButton_Click"
+                        IsEnabled="{Binding IsRedonlyMode, Converter={StaticResource InverseBooleanConverter}, ElementName=MainUI}" />
+                <Button x:Name="CancelButton" Content="Cancel" Margin="5" HorizontalAlignment="Right" Width="75"
+                        Height="30" Click="CancelButton_OnClickButton_Click"
+                        IsEnabled="{Binding CurrentExecutingThread, Converter={StaticResource IsNotNullToBooleanConverter}, ElementName=MainUI}" />
             </StackPanel>
         </Grid>
         <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch" Background="Black"
@@ -52,7 +66,8 @@
                  Background="Black" SelectionBrush="#FF74BAFF" Foreground="White" FontFamily="Consolas" Cursor=""
                  ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Auto" UseLayoutRounding="False"
                  FontStretch="Expanded" AllowDrop="False" IsUndoEnabled="False"
-                 IsInactiveSelectionHighlightEnabled="True" IsManipulationEnabled="True" IsReadOnly="True" ToolTip="Log" >
+                 IsInactiveSelectionHighlightEnabled="True" IsManipulationEnabled="True" IsReadOnly="True"
+                 ToolTip="Log">
             <TextBox.ContextMenu>
                 <ContextMenu>
                     <MenuItem x:Name="ClearLog" Header="Clear log" Click="ClearLog_Click" />
@@ -61,7 +76,10 @@
         </TextBox>
         <DockPanel Grid.Row="3" LastChildFill="True" Margin="5, 0">
             <Label FontSize="12" Padding="5 0" Foreground="White" VerticalContentAlignment="Center" Content="{}{sid} =" />
-            <TextBox x:Name="CurrentSidTextBlock" Width="Auto" Margin="1" VerticalAlignment="Stretch"  Foreground="White" Background="#FF191919" BorderBrush="#FF191919"/>
+            <TextBox x:Name="CurrentSidTextBlock"
+                     IsReadOnly="{Binding IsRedonlyMode, ElementName=MainUI}"
+                     Width="Auto" Margin="1" VerticalAlignment="Stretch" Foreground="White" Background="#FF191919"
+                     BorderBrush="#FF191919" />
         </DockPanel>
     </Grid>
 </Window>
